--- a/webpack/07_library/package.json
+++ b/webpack/07_library/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-loader": "^8.2.2",
     "lodash": "^4.17.21",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0"
